content animate scrollbar issue fix

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,14 +5,17 @@
 // bower:scss
 // endbower
 
-html, body, #app-wrapper{
+html, body, #app-wrapper {
     overflow: hidden !important;
-    height:100%;
-    min-height:100%;
+    height: 100%;
+    min-height: 100%;
 }
 
-main{
-//    width: 100%;
+main {
+    //    width: 100%;
+    .main-content {
+        position: relative;
+    }
 }
 
 /**
